--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salman-Yusuf Khalid Olaniyi</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- Stars background -->
     <div class="stars"></div>
@@ -16,9 +18,9 @@
         <p class="assignments-text">below are the links to my assignments</p>
         <div class="assignments">
             <a href="./Otter/" class="assignment-link">Assignment 1</a>
-            <a href="/Novus/" class="assignment-link">Assignment 2</a>
-            <a href="/Huckleberry/" class="assignment-link">Assignment 3</a>
-            <a href="#" class="assignment-link">Assignment 4</a>
+            <a href="/Huckleberry/" class="assignment-link">Assignment 2</a>
+            <a href="/Novus/" class="assignment-link">Assignment 3</a>
+            <a href="/Sign-up/" class="assignment-link">Assignment 4</a>
             <a href="#" class="assignment-link">Assignment 5</a>
             <a href="/Scissors/" class="assignment-link">Assignment 6</a>
         </div>
@@ -40,4 +42,5 @@
         }
     </script>
 </body>
+
 </html>
