🚀 Completed Huckleberry CSS assignment

--- a/Huckleberry/index.html
+++ b/Huckleberry/index.html
@@ -15,9 +15,11 @@
             <div class="topp-container">
 
                 <h1 class="top-title">Huckleberry</h1>
-                <p>An avant-garde agency focused on connecting <span class="green">passion</span> with <span
-                        class="green">logistics.</span> </p>
-                <p>A better way to solve the problems of tomorrow.</p>
+                <div class="flex-col">
+                    <p>An avant-garde agency focused on connecting <span class="green">passion</span> with <span
+                            class="green">logistics.</span> </p>
+                    <p>A better way to solve the problems of tomorrow.</p>
+                </div>
             </div>
         </div>
 
