--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <p class="subtitle">ALT/SOE/024/5457</p>
         <p class="assignments-text">below are the links to my assignments</p>
         <div class="assignments">
-            <a href="./Otter/" class="assignment-link">Assignment 1</a>
+            <a href="/Otter/" class="assignment-link">Assignment 1</a>
             <a href="/Huckleberry/" class="assignment-link">Assignment 2</a>
             <a href="/Novus/" class="assignment-link">Assignment 3</a>
             <a href="/Sign-up/" class="assignment-link">Assignment 4</a>
-            <a href="#" class="assignment-link">Assignment 5</a>
+            <a href="/WP-Pusher/" class="assignment-link">Assignment 5</a>
             <a href="/Scissors/" class="assignment-link">Assignment 6</a>
         </div>
     </div>
