🚀 Completed WP-Pusher

--- a/WP-Pusher/index.html
+++ b/WP-Pusher/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WP-Pusher</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../back.css">
     <link rel="shortcut icon" href="./favicon.svg" type="image/x-icon">
 </head>
 
 <body>
+    <a href="/" class="back-button2">Back to Home</a>
     <nav>
         <div class="logo">
             <img src="./assets/logo.png" alt="WP-Pusher Logo">
@@ -21,6 +23,7 @@
             <li><a href="">Help</a></li>
             <button class="acc-btn">Account</button>
         </ul>
+        <span class="hamburger"></span>
     </nav>
     <main>
         <div class="main-container">
@@ -50,7 +53,7 @@
                 </div>
                 <div class="basic-info">
                     <div class="info-header">
-                        <span>1</span>
+                        <span>2</span>
                         <p>Your Payment Information</p>
                     </div>
 
@@ -75,9 +78,47 @@
                         <img src="./assets/question.svg" alt="">
                         <p><strong>Need any help?</strong> Don’t hesitate to contact support!</p>
                     </div>
+                    <div class="stripe">
+                        <img src="./assets/powered_by_stripe.png" alt="stripe">
+                    </div>
                 </div>
             </form>
-            <div class="freelancer">Freelancer</div>
+            <div class="freelancer">
+                <div>
+                    <h2 class="freelance-title">Freelancer</h2>
+                    <p class="currency"><span class="sign">$ <span class="currency-num">99</span></span> / year</p>
+                    <p class="auto">Automatically renews after 1 year</p>
+                </div>
+                <div class="feature-list">
+                    <div class="feature-item">
+                        <span class="checkmark">✓</span>
+                        <span class="feature-text">Use on 5 client sites</span>
+                    </div>
+                    <div class="feature-item">
+                        <span class="checkmark">✓</span>
+                        <span class="feature-text">Private repositories</span>
+                    </div>
+                    <div class="feature-item">
+                        <span class="checkmark">✓</span>
+                        <span class="feature-text">Email support</span>
+                    </div>
+                </div>
+                <div class="client-agency">
+                    <p>Need 20 client sites</p>
+                    <p>Switch to the Agency plan</p>
+                </div>
+
+                <div class="line"></div>
+                <div class="testimonial">
+                    <p class="test-main">FTP is horrible to deal with. <strong>WP Pusher</strong> solves that issue, and
+                        the customer
+                        support is awesome!</p>
+                    <div class="user">
+                        <img src="./assets/kirk.png" alt="">
+                        <p>Kirk Beard</p>
+                    </div>
+                </div>
+            </div>
         </div>
         <P class="terms">© 2018 WP Pusher IVS · Terms of Service</P>
     </main>
