--- a/Otter/index.html
+++ b/Otter/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Otter Essay</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../back.css">
 </head>
 
 <body>
+    <a href="/" class="back-button2">Back to Home</a>
     <div class="container">
         <div class="card">
             <div class="card--header">
