--- a/Sign-up/index.html
+++ b/Sign-up/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./sign.css">
+    <link rel="stylesheet" href="../back.css">
 </head>
 
 <body>
-
+    <a href="/" class="back-button2">Back to Home</a>   
 
     <div class="container">
         <div class="container-left">
