--- a/Huckleberry/index.html
+++ b/Huckleberry/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <a href="/" class="back-button2">Back to Home</a>
+    <a href="/" class="back-button">Back to Home</a>
     <div class="container">
 
         <div class="topp">
