🚀 Why us section

--- a/Scissors/index.html
+++ b/Scissors/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCISSOR</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../back.css">
 
     <!-- meta tags for seo for a URL shortner landing page -->
     <meta name="description"
@@ -16,7 +17,7 @@
 </head>
 
 <body>
-
+    <a href="/" class="back-button2">Back to Home</a>
     <header>
         <nav>
             <div class="logo">
@@ -82,7 +83,57 @@
                 </div>
             </div>
         </section>
-        <section class="why"></section>
+        <section class="why">
+            <div class="why-left">
+                <h2>Why choose <span>Scissors</span></h2>
+                <p>Scissors is the hub of everything that has to do with your link management. We shorten your URLs,
+                    allow you creating custom ones for your personal, business, event usage. Our swift QR code creation,
+                    management and usage tracking with advance analytics for all of these is second to none. </p>
+            </div>
+            <div class="why-right">
+                <div class="grid-item">
+                    <div class="grid-item-icon">
+                        <img src="./assets/icon/url.svg" alt="URL Shortning">
+                    </div>
+                    <div class="grid-item-content">
+                        <h3>URL Shortening</h3>
+                        <p>Scissor allows you to shorten URLs of your business, events. Shorten your URL at scale, URL
+                            redirects.</p>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <div class="grid-item-icon">
+
+                        <img src="./assets/icon/custom.svg" alt="Custom URLs">
+                    </div>
+                    <div class="grid-item-content">
+                        <h3>Custom URLs</h3>
+                        <p>With Scissor, you can create custom URLs, with the length you want! A solution for socials
+                            and businesses.</p>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <div class="grid-item-icon">
+                        <img src="./assets/icon/qr.svg" alt="QR codes">
+                    </div>
+                    <div class="grid-item-content">
+                        <h3>QR Codes</h3>
+                        <p>Generate QR codes to your business, events. Bring your audience and customers to your
+                            doorstep with this scan and go solution.</p>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <div class="grid-item-icon">
+                        <img src="./assets/icon/analytics.svg" alt="Data Analytics">
+                    </div>
+                    <div class="grid-item-content">
+                        <h3>Data Analytics</h3>
+                        <p>Receive data on the usage of either your shortened URL, custom URLs or generated QR codes.
+                            Embedded to monitor progress.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="pricing"></section>
         <section class="trim"></section>
         <saection class="faq"></saection>
