💄 Pricing, trim and faq sections

--- a/Scissors/index.html
+++ b/Scissors/index.html
@@ -134,9 +134,211 @@
                 </div>
             </div>
         </section>
-        <section class="pricing"></section>
-        <section class="trim"></section>
-        <saection class="faq"></saection>
+        <!-- <section class="pricing">
+            <div class="pricing-header">
+                <h2>A <span>price perfect</span> for your needs.</h2>
+                <p>From catering for your personal, business, event, socials needs, you can be rest assured we have you
+                    in mind in our pricing.</p>
+            </div>
+            <div class="prices">
+                <div class="prices-item"></div>
+                <div class="prices-item professional"></div>
+                <div class="prices-item"></div>
+            </div>
+            <div class="pricing-btns">
+                <button class="pricing-btn custom-btn">Get Custom Pricing</button>
+                <button class="pricing-btn select-btn">Select Pricing</button>
+            </div>
+        </section> -->
+        <section class="pricing">
+            <div class="pricing-header">
+                <h2>A <span>price perfect</span> for your needs.</h2>
+                <p>From catering for your personal, business, event, socials needs, you can be rest assured we have you in mind in our pricing.</p>
+            </div>
+            <div class="prices">
+                <div class="prices-item">
+                    <div>
+                        <div class="plan-name">Basic</div>
+                        <div class="plan-price">Free</div>
+                        <div class="plan-description">Free plan for all users</div>
+                    </div>
+                    <ul class="features-list">
+                        <li class="feature-item">Unlimited URL Shortening</li>
+                        <li class="feature-item">Basic Link Analytics</li>
+                        <li class="feature-item">Customizable Short Links</li>
+                        <li class="feature-item">Standard Support</li>
+                        <li class="feature-item">Ad-supported</li>
+                    </ul>
+                </div>
+    
+                <div class="prices-item professional">
+                    <div>
+                        <div class="plan-name">Professional</div>
+                        <div class="plan-price">$15/month</div>
+                        <div class="plan-description">Ideal for business creators</div>
+                    </div>
+                    <ul class="features-list">
+                        <li class="feature-item">Enhanced Link Analytics</li>
+                        <li class="feature-item">Custom Branded Domains</li>
+                        <li class="feature-item">Advanced Link Customization</li>
+                        <li class="feature-item">Priority Support</li>
+                        <li class="feature-item">Ad-free Experience</li>
+                    </ul>
+                </div>
+    
+                <div class="prices-item">
+                    <div>
+                        <div class="plan-name">Teams</div>
+                        <div class="plan-price">$25/month</div>
+                        <div class="plan-description">Share with up to 10 users</div>
+                    </div>
+                    <ul class="features-list">
+                        <li class="feature-item">Team Collaboration</li>
+                        <li class="feature-item">User Roles and Permissions</li>
+                        <li class="feature-item">Enhanced Security</li>
+                        <li class="feature-item">API Access</li>
+                        <li class="feature-item">Dedicated Account Manager</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="pricing-btns">
+                <button class="pricing-btn custom-btn">Get Custom Pricing</button>
+                <button class="pricing-btn select-btn">Select Pricing</button>
+            </div>
+        </section>
+
+        <section class="trim">
+            <div class="trim-container">
+                <input type="text" placeholder="Paste URL here...">
+                <div class="form-group">
+                    <select>
+                        <option value="" disabled selected>Choose Domain</option>
+                        <option value="com">COM</option>
+                        <option value="to">TO</option>
+                        <option value="dev">DEV</option>
+                    </select>
+                    <input type="text" placeholder="Type Alias here">
+                </div>
+                <button class="pricing-btn select-btn">Trim URL
+                    <img src="./assets/trim/wand.svg" alt="wand"> </button>
+
+                <p>By clicking TrimURL, I agree to the <span>Terms of Service</span> ,<br> <span>Privacy Policy</span>
+                    and Use of Cookies.</p>
+            </div>
+
+
+        </section>
+        <section class="faq">
+            <div class="faq-header">
+                <h2>FAQs</h2>
+            </div>
+
+            <!-- accordion -->
+            <div class="accordion-container">
+                <div class="accordion-item">
+                    <input type="checkbox" id="accordion-1">
+                    <label for="accordion-1" class="accordion-header">
+                        How does URL shortening work?
+                    </label>
+                    <div class="accordion-content">
+                        URL shortening works by taking a long URL and creating a shorter, condensed version that
+                        redirects to the original URL. When a user clicks on the shortened link, they are redirected to
+                        the intended destination.
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <input type="checkbox" id="accordion-2">
+                    <label for="accordion-2" class="accordion-header">
+                        Is it necessary to create an account to use the URL shortening service?
+                    </label>
+                    <div class="accordion-content">
+                        Account requirements vary by service. While some URL shorteners allow anonymous use, creating an
+                        account often provides additional features like link management and analytics.
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <input type="checkbox" id="accordion-3">
+                    <label for="accordion-3" class="accordion-header">
+                        Are the shortened links permanent? Will they expire?
+                    </label>
+                    <div class="accordion-content">
+                        Link permanence depends on the service provider. Some offer permanent links, while others may
+                        expire after a certain period or if unused. Premium accounts often ensure permanent links.
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <input type="checkbox" id="accordion-4">
+                    <label for="accordion-4" class="accordion-header">
+                        Are there any limitations on the number of URLs I can shorten?
+                    </label>
+                    <div class="accordion-content">
+                        Limitations vary by service. Free accounts may have daily or monthly limits, while premium
+                        accounts typically offer unlimited URL shortening.
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <input type="checkbox" id="accordion-5">
+                    <label for="accordion-5" class="accordion-header">
+                        Can I customize the shortened URLs to reflect my brand or content?
+                    </label>
+                    <div class="accordion-content">
+                        Many services offer custom URL options, allowing you to create branded or memorable links. This
+                        feature may be limited to premium accounts.
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <input type="checkbox" id="accordion-6">
+                    <label for="accordion-6" class="accordion-header">
+                        Can I track the performance of my shortened URLs?
+                    </label>
+                    <div class="accordion-content">
+                        Most URL shortening services provide basic analytics including click counts. Premium features
+                        may include detailed metrics like geographic data and referral sources.
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <input type="checkbox" id="accordion-7">
+                    <label for="accordion-7" class="accordion-header">
+                        How secure is the URL shortening service? Are the shortened links protected against spam or
+                        malicious activity?
+                    </label>
+                    <div class="accordion-content">
+                        Reputable URL shortening services implement security measures to prevent spam and malicious use.
+                        This includes link scanning and suspicious activity monitoring.
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <input type="checkbox" id="accordion-8">
+                    <label for="accordion-8" class="accordion-header">
+                        What is a QR code and what can it do?
+                    </label>
+                    <div class="accordion-content">
+                        A QR code is a two-dimensional barcode that can store data like URLs, text, or contact
+                        information. When scanned with a smartphone camera, it quickly provides access to the encoded
+                        information.
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <input type="checkbox" id="accordion-9">
+                    <label for="accordion-9" class="accordion-header">
+                        Is there an API available for integrating the URL shortening service into my own applications or
+                        websites?
+                    </label>
+                    <div class="accordion-content">
+                        A QR code is a two-dimensional barcode that can store data like URLs, text, or contact
+                        information. When scanned with a smartphone camera, it quickly provides access to the encoded
+                        information.
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="footer">
