--- a/Scissors/index.html
+++ b/Scissors/index.html
@@ -57,6 +57,9 @@
                 <button class="btn btn-login">Learn more</button>
             </div>
         </section>
+        <section class="seamless">
+            <img src="./assets/seamlessly.png" alt="">
+        </section>
         <section class="oval"></section>
         <section class="stats-container">
             <div class="stats">
@@ -134,26 +137,11 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="pricing">
+        <section class="pricing">
             <div class="pricing-header">
                 <h2>A <span>price perfect</span> for your needs.</h2>
                 <p>From catering for your personal, business, event, socials needs, you can be rest assured we have you
                     in mind in our pricing.</p>
-            </div>
-            <div class="prices">
-                <div class="prices-item"></div>
-                <div class="prices-item professional"></div>
-                <div class="prices-item"></div>
-            </div>
-            <div class="pricing-btns">
-                <button class="pricing-btn custom-btn">Get Custom Pricing</button>
-                <button class="pricing-btn select-btn">Select Pricing</button>
-            </div>
-        </section> -->
-        <section class="pricing">
-            <div class="pricing-header">
-                <h2>A <span>price perfect</span> for your needs.</h2>
-                <p>From catering for your personal, business, event, socials needs, you can be rest assured we have you in mind in our pricing.</p>
             </div>
             <div class="prices">
                 <div class="prices-item">
@@ -170,7 +158,7 @@
                         <li class="feature-item">Ad-supported</li>
                     </ul>
                 </div>
-    
+
                 <div class="prices-item professional">
                     <div>
                         <div class="plan-name">Professional</div>
@@ -185,7 +173,7 @@
                         <li class="feature-item">Ad-free Experience</li>
                     </ul>
                 </div>
-    
+
                 <div class="prices-item">
                     <div>
                         <div class="plan-name">Teams</div>
@@ -339,29 +327,100 @@
                 </div>
             </div>
         </section>
+        <section class="cta">
+            <div class="cta-container">
+                <h3>Revolutionizing Link Optimization</h3>
+                <div>
+                    <button class="pricing-btn select-btn">Get Started</button>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer>
-        <div class="footer">
-            <div class="footer-logo">
+    <footer class="footer-container">
+        <div class="footer-content">
+            <div class="footer-logo-social">
                 <img src="./assets/footer-logo.png" alt="">
-            </div>
-            <div class="footer-menu">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-            <div class="footer-social">
-                <ul>
-                    <li><a href="#"><img src="./assets/facebook.png" alt=""></a></li>
+                <ul class="social-icons">
                     <li><a href="#"><img src="./assets/twitter.png" alt=""></a></li>
-                    <li><a href="#"><img src="./assets/instagram.png" alt=""></a></li>
+                    <li><a href="#"><img src="./assets/instagram.png" alt="Instagram"></a></li>
+                    <li><a href="#"><img src="./assets/linkedin.png" alt="LinkedIn"></a></li>
+                    <li><a href="#"><img src="./assets/facebook.png" alt="Facebook"></a></li>
                 </ul>
+            </div>
+
+            <div class="footer-column">
+                <h3>Why Scissor?</h3>
+                <ul>
+                    <li><a href="#">Scissor 101</a></li>
+                    <li><a href="#">Integrations & API</a></li>
+                    <li><a href="#">Pricing</a></li>
+                </ul>
+                <h3>Resources</h3>
+                <ul>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Resource Library</a></li>
+                    <li><a href="#">Developers</a></li>
+                    <li><a href="#">App Connectors</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Trust Center</a></li>
+                    <li><a href="#">Browser Extension</a></li>
+                    <li><a href="#">Mobile App</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-column">
+                <h3>Solutions</h3>
+                <ul>
+                    <li><a href="#">Social Media</a></li>
+                    <li><a href="#">Digital Marketing</a></li>
+                    <li><a href="#">Customer Service</a></li>
+                    <li><a href="#">For Developers</a></li>
+                </ul>
+                <h3>Features</h3>
+                <ul>
+                    <li><a href="#">Branded Links</a></li>
+                    <li><a href="#">Mobile Links</a></li>
+                    <li><a href="#">Campaign</a></li>
+                    <li><a href="#">Management & Analytics</a></li>
+                    <li><a href="#">QR Code generation</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-column">
+                <h3>Products</h3>
+                <ul>
+                    <li><a href="#">Link Management</a></li>
+                    <li><a href="#">QR Codes</a></li>
+                    <li><a href="#">Link-in-bio</a></li>
+                </ul>
+                <h3>Legal</h3>
+                <ul>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Cookie Policy</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Acceptable Use Policy</a></li>
+                    <li><a href="#">Code of Conduct</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-column">
+                <h3>Company</h3>
+                <ul>
+                    <li><a href="#">About Scissor</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Partners</a></li>
+                    <li><a href="#">Press</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Reviews</a></li>
+                </ul>
+
             </div>
         </div>
-    </footer>
 
+        <div class="footer-bottom">
+            <p>Terms of Service | Security | Scissor 2023</p>
+        </div>
+    </footer>
     <script src="https://unpkg.com/lucide@latest"></script>
     <script>
         lucide.createIcons();
